[gd_scene load_steps=4 format=3 uid="uid://6fbvs6ymt1no"]

[ext_resource type="Script" path="res://ui/widgets/enemy_health_comp_ui.gd" id="1_ue8u8"]
[ext_resource type="PackedScene" uid="uid://bknffommb3er4" path="res://ui/widgets/health_comp_ui.tscn" id="2_h1ld2"]
[ext_resource type="PackedScene" uid="uid://xikuimul3exk" path="res://ui/widgets/action_ui.tscn" id="3_gf4pf"]

[node name="EnemyHealthComp" type="MarginContainer"]
custom_minimum_size = Vector2(0, 120)
offset_right = 200.0
offset_bottom = 65.0
script = ExtResource("1_ue8u8")

[node name="HealthComp" parent="." instance=ExtResource("2_h1ld2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" parent="HealthComp/MarginContainer" index="0"]
theme_override_constants/separation = -15

[node name="Container2" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="HBoxContainer" parent="Container2"]
layout_mode = 2

[node name="ActionUi" parent="Container2/MarginContainer2" instance=ExtResource("3_gf4pf")]
unique_name_in_owner = true
layout_mode = 2

[editable path="HealthComp"]
